# cdn-builder

./: MANIFEST.in  README.md  pyproject.toml  setup.py
tests/: test_000.py
tlaloc_cdn_builder/: __init__.py  builder.py  edge_functions.py
tlaloc_cdn_builder/functions/api-origin-request/: index.mjs  package-lock.json  package.json  role.json
tlaloc_cdn_builder/functions/api-origin-request/errors/: Forbidden.mjs  NoWeelockAuthentication.mjs  NotAuthenticated.mjs  Parse.mjs  WeelockErrors.mjs
tlaloc_cdn_builder/functions/api-origin-response/: index.mjs  role.json
tlaloc_cdn_builder/functions/s3-origin-request/: index.mjs  role.json
tlaloc_cdn_builder/functions/s3-origin-request/errors/: MissingOrExpiredAccessToken.mjs  NoWeelockAuthentication.mjs  ParseError.mjs  WeelockErrors.mjs  WrongEntryPoint.mjs
tlaloc_cdn_builder/functions/viewer-request/: index.mjs  package-lock.json  package.json  readme.md  role.json
tlaloc_cdn_builder/functions/viewer-request/errors/: ExpiredAccessToken.mjs  InvalidAccessToken.mjs  NoAccessToken.mjs  Redirect.mjs  WeelockErrors.mjs
