[tool.poetry]
name = "tlaloc-cdn-builder"
version = "0.1.0"
description = "A module for building CDN"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[tool.poetry.build]
include = [
    "tlaloc_cdn_builder/functions/*"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"