[project]
name = "tlaloc-cdn-builder"
version = "0.1.0"
description = "A module for building CDN"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tlaloc_cdn_builder"]

[tool.setuptools.package-data]
tlaloc_cdn_builder = ["functions/*"]